--- a/upcoming_changes/2952.bugfix.rst
+++ b/upcoming_changes/2952.bugfix.rst
@@ -1,1 +1,1 @@
-Fix SpanROI regression: the output of :py:meth:`~.roi.BaseInteractiveROI.interactive`` was not updated. Fix errors with updating limits when plotting empty slice of data. Improve docstrings and test coverage.
+Fix :py:class:`~.roi.SpanROI` regression: the output of :py:meth:`~.roi.BaseInteractiveROI.interactive` was not updated when the ROI was changed. Fix errors with updating limits when plotting empty slice of data. Improve docstrings and test coverage.
